--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,37 @@
 body {
     text-align: center;
+    margin: 0px;
 
 }
 
+form {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 40px;
+}
+
+textarea {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+label {
+    padding: 4px;
+}
 
 .section-title {
     margin-bottom: 20px;
-    margin-top: 20px;
+    margin-top: 0px;
     font-size: 28px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.margin {
-    margin-right: 20%;
-    margin-left: 20%;
+.black-background {
+    color: white;
+    background-color: black;
+}
+
+.container {
+    margin-right: 27%;
+    margin-left: 27%;
 }
 
 .paragraph {
@@ -22,8 +41,8 @@ body {
 
 .section {
 
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .custom-width {
@@ -36,6 +55,16 @@ body {
 
 .message-input {
     height: 40px;
+}
+
+.opaque-bg {
+    background-color: rgba(0,0,0,0.7);
+    background-blend-mode: color;
+}
+
+.opaque-bg-white {
+    background-color: rgba(255,255,255,0.7);
+    background-blend-mode: color;
 }
 
 @media (max-width: 480px) {
