--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ label {
 }
 
 @media (max-width: 480px) {
-    .margin {
+    .container {
         margin-right: 5%;
         margin-left: 5%;
     }
